# pdal-conan-bug-examples

./: README.md
shared/: conanfile.txt  pyproject.toml
shared/src/: main.cpp
static/: CMakeLists.txt  conanfile.txt  tasks.py
